📱 Fix Phone Number Input & Add File Storage Plan
🔧 Phone Number Fixes:
- Removed +91 auto-formatting (was causing input issues)
- Simplified to 10-digit input only
- Updated placeholder to '9876543210'
- Added maxlength='10' to prevent over-typing
- Only allows digits, auto-removes non-numeric characters
- Updated validation message to be more user-friendly
- Pattern still validates 6-9 starting digits

💾 File Storage Documentation:
- Added detailed file storage plan for Phase 3
- Current: Base64 in localStorage (demo)
- Future: Server file system with proper directory structure
- Documented development vs production paths
- Added cloud storage options (AWS S3, Google Cloud)

📝 Updated README:
- Clearer phone validation rules
- File storage architecture explanation
- Backend implementation roadmap

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <div class="form-group">
                     <label for="phone">Phone Number *</label>
-                    <input type="tel" id="phone" name="phone" placeholder="+91 98765 43210" required>
+                    <input type="tel" id="phone" name="phone" placeholder="9876543210" maxlength="10" required>
                     <small class="help-text">This will be your unique identifier</small>
                 </div>
 
